# historical-document-analysis

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/datasets/document_models/: bibliography_document.py  gemara_document.py  genizah_document.py
src/datasets/indexing/: elastic_index_genizah.py  index_cairo_documents.py
src/datasets/indexing/bibliography/: README.md  complete_pipeline_example.py  index_all_bibliography.py  index_bibliography.py  secondary_processing_example.py
src/datasets/indexing/bibliography/embedding_cache/: embeddings_e4a92ecc9ee45f70946c578731d2e168.pkl
src/datasets/indexing/neo4j/: genizah_kg_schema.cypher  knowlege_graph_poc.py  princeton_genizah_kg_import.cypher
src/datasets/indexing/sql/: README.md  bulk_insert_all_documents.py  cambridge_sql_adapter.py  db_config_example_template.json  genizah_schema.sql  sql_insert_genizah_documents.py  test_latest_files.py  test_sql_insertion.py
src/embeddings/: document_process.py  embedding_models.py
src/embeddings/visualizations/: popup_enhanced.js
src/finetuning/: wandb_gemma_trainer.py
src/finetuning/colab_notebooks/: training_full_gemma.ipynb
src/finetuning/diagnostic_scripts/: gemma_trainer_diagnostic.py
src/finetuning/donut_hebrew_model/: donut_base.py  finetune_donut.py
src/finetuning/vqa_finetune/: pali_gemma.py  trainers.py
src/finetuning_scripts/: donut_utils.py  metrics.py
src/finetuning_scripts/clip_hebrew/: clip_hebrew.py
src/models/data_collators/: gemma_three_collator.py
src/models/llm/: METADATA_FEATURE.md  add_full_text_to_structured.py  example_book_metadata.json  gemma_three.py  genizah_fragment_agent.py  secondary_llm_processing.py  structured_json_llm.py
src/models/llm/transcription_results/: final_results_20260105_180922.json
src/models/ocr/: book_ocr_service.py
src/multimodal_embeddings/: document_process.py
src/multimodal_embeddings/visualizations/: document_visualizer.py
